# web-ui

./: README.md  pyproject.toml
src/webui/: __init__.py  app.py  core.py
src/webui/templates/: index.html
tests/: test_core
workflows/: publish.yml
